--- a/_posts/0000-01-02-lubtuts.md
+++ b/_posts/0000-01-02-lubtuts.md
@@ -2,5 +2,6 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
-Use the left arrow to go back!
+![A test image](https://i.ibb.co/tHhQfy9/clipart573564.png)
+
+->Use the left arrow to go back!<-
